<resources>
    <string name="app_name">M8_GAME</string>
    <string name="game_name">Wolf Dungeon</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="contentDescCharacterImg">TODO</string>
    <string name="level">level: </string>
    <string name="money">Mastery Points: </string>
    <string name="store">STORE</string>
    <string name="skills">skills</string>
    <string name="store_title">Increment Stats</string>
    <string name="item_name">Sword</string>
    <string name="item_price">200</string>
    <string name="item_type">Weapons</string>
    <string name="fragment_skills_title">Upgrade Skills</string>
    <string name="character_name">Character Name</string>
</resources>
