<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="106dp"
    android:paddingRight="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewGameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_main"
        android:text="@string/game_name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/EditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/font_main"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textColorHint="#FFF" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font_main"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#FFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/button"
            android:text="LOGIN"
            android:fontFamily="@font/font_main"
            android:textColor="@color/colorAccent"
            android:textSize="28sp" />
    </LinearLayout>
</LinearLayout>