<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="106dp"
    android:paddingRight="32dp"
    tools:context=".PKG_MENU.Login">

    <TextView
        android:id="@+id/TextViewGameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/font_main"
        android:text="@string/game_name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/EditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewGameName"
        android:background="@drawable/button"
        android:padding="16dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/font_main"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textColorHint="#FFF" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTextUsername"
        android:background="@drawable/button"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:fontFamily="@font/font_main"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#FFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="@font/font_main"
            android:onClick="register"
            android:text="Register"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="italic"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"
            android:background="@drawable/button"
            android:fontFamily="@font/font_main"
            android:onClick="login"
            android:text="LOGIN"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="italic" />

    </LinearLayout>
</RelativeLayout>